force-app/main/default/objects/Inbound_Order_Status__c/Inbound_Order_Status__c.object-meta.xml
<CustomObject>
    <description
  >Test/debug/initial processing custom object for wiring up platform event.</description>
    <label>Inbound Order Status</label>
    <nameField>
        <displayFormat>IO{000000}</displayFormat>
        <label>Inbound Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Order Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>