force-app/main/default/objects/Inbound_Order_Status__c/fields/Event_Uuid__c.field-meta.xml
<CustomField>
    <fullName>Event_Uuid__c</fullName>
    <description>Event UUID for this record</description>
    <label>Event UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>