force-app/main/default/objects/Inbound_Order_Status__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description
  >Order Type, which will eventually go into the standard order type field for use as a deterministic partition key.</description>
    <label>Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>