force-app/main/default/objects/Inbound_Order_Status__c/fields/Platform_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event_Name__c</fullName>
    <externalId>true</externalId>
    <label>Platform Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>