force-app/main/default/objects/Inbound_Order_Status__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Field to store status values during testing</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>